[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "loop-rate-limiters"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
maintainers = [
    {name = "Stéphane Caron", email = "stephane.caron@normalesup.org"},
]
dynamic = ['version', 'description']
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []
keywords = ["rate", "loop", "frequency", "regulator", "limiter"]

[project.urls]
Source = "https://github.com/tasts-robots/loop-rate-limiters"
Tracker = "https://github.com/tasts-robots/loop-rate-limiters/issues"
Changelog = "https://github.com/tasts-robots/loop-rate-limiters/blob/master/CHANGELOG.md"

[tool.black]
line-length = 79

[tool.flit.module]
name = "loop_rate_limiters"

[tool.flit.sdist]
exclude = [
    ".github",
    ".gitignore",
]

[tool.ruff]
line-length = 79
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pydocstyle
    "D"
]
ignore = [
    "D401",  # good for methods but not for class docstrings
    "D405",  # British-style section names are also "proper"!
]

[tool.ruff.pydocstyle]
convention = "google"
